app: Fix restoring datatab control

--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -526,9 +526,10 @@ rf_get_order <- reactive({
 })
 
 rf_get_inp_datatab <- eventReactive(input$datatab,{
-    z <- data.table::as.data.table(tryCatch(rhandsontable::hot_to_r(input$datafiles)),
-                                   error = function(e) def_datafiles)
-       
+    z <- data.table::as.data.table(tryCatch(rhandsontable::hot_to_r(input$datatab)),
+                                   error = function(e) def_datatab)
+
+    message(colnames(z))
     z[,.(tag=as.character(tag),
          adduct=as.character(adduct),
          set=as.character(set)), with = T]
