--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -368,9 +368,13 @@ DT::dataTableOutput("comp_table")
 DT::dataTableOutput("setid_table")
 ```
 
-# Save and Restore Config
+# Save and Restore
 
-Load the config file if needed.
+## Save and Restore from a Config File
+
+Shinyscreen uses _YAML_ config files to initialise the
+computation. These operations only save and restore the input
+parameters of your computation, _**not**_ your data.
 
 ```{r, echo=FALSE}
 actionButton(inputId = "conf_file_load_b",
@@ -378,13 +382,21 @@ actionButton(inputId = "conf_file_load_b",
 
 ```
 
-
-
-Save the config file if needed.
-
 ```{r, echo=FALSE}
 actionButton(inputId = "conf_file_save_b",
              label= "Save config")
+
+```
+
+## Restore the project
+
+To retrieve a previously extracted data, restore the project state
+here. It is also possible to load it in a script (the state is saved
+in the _RDS_ format).
+
+```{r, echo=FALSE}
+actionButton(inputId = "state_file_load_b",
+             label= "Restore project state")
 
 ```
 
@@ -406,6 +418,27 @@ actionButton(inputId = "extract_b",
              label = "Extract")
 ```
 
+<details><summary>Prescreen extracted spectra.</summary>
+
+After the data extraction is finished, the quality of the retrieved
+spectra can be checked using the criteria defined in the
+_Prescreening_ tab of the _Configuration_ Section. The resulting
+_summary table_ is given below and is based on the prescreening
+criteria and filter and ordering setup specified in _Filter and order
+the summary table_ configuration subsection.
+
+</details>
+
+</details>
+```{r, echo=FALSE}
+actionButton(inputId = "presc_b",
+             label = "Prescreen and filter")
+```
+
+```{r, echo=FALSE}
+DT::dataTableOutput("summ_table")
+```
+
 
 # Browse Results
 
@@ -420,6 +453,123 @@ ord_nms <- gsub("^-(.+)","\\1",shinyscreen:::DEF_INDEX_SUMM)
 ord_asc <- grepl("^-.+",shinyscreen:::DEF_INDEX_SUMM)
 ord_asc <- factor(ifelse(ord_asc, "descending", "ascending"),levels = c("ascending","descending"))
 def_ord_summ <- shinyscreen:::dtable("Column Name"=ord_nms,"Direction"=ord_asc)
+
+
+
+update_gui <- function(in_conf, session) {
+    upd_unit <- function(entry,inp_val,inp_unit,choices) {
+        if (isTruthy(entry)) {
+            cntnt <- strsplit(entry,split = "[[:space:]]+")[[1]]
+            cntnt <- cntnt[nchar(cntnt) > 0]
+            if (length(cntnt)!=2) stop("(upd_unit) ","Unable to interpret ", entry)
+            val <- cntnt[[1]]
+            unit <- cntnt[[2]]
+            updateNumericInput(session = session,
+                               inputId = inp_val,
+                               value = as.numeric(val))
+            updateSelectInput(session = session,
+                              inputId = inp_unit,
+                              selected = unit,
+                              choices = choices)
+        }
+    }
+
+    upd_num <- function(entry,inp_val) {
+        if (isTruthy(entry)) {
+            updateNumericInput(session = session,
+                               inputId = inp_val,
+                               value = as.numeric(entry))
+        }
+    }
+
+    upd_sel <- function(inputId,selected,choices) {
+        if (isTruthy(selected)) {
+            updateSelectInput(session = session,
+                              inputId = inputId,
+                              selected = selected,
+                              choices = choices)
+        }
+    }
+
+    isolate({
+        rv_state$conf$project <- in_conf$project
+        rv_state$conf$data <- in_conf$data
+        ## Lists
+        rv_state$conf$compounds$lists <- in_conf$compounds$lists
+        rv_state$conf$compounds$sets <- in_conf$compounds$sets
+        
+        ## Tolerance
+        
+        upd_unit(in_conf$tolerance[["ms1 fine"]],
+                 "ms1_fine",
+                 "ms1_fine_unit",
+                 choices=c("ppm","Da"))
+        upd_unit(in_conf$tolerance[["ms1 coarse"]],
+                 "ms1_coarse",
+                 "ms1_coarse_unit",
+                 choices=c("ppm","Da"))
+
+        upd_unit(in_conf$tolerance[["eic"]],
+                 "ms1_eic",
+                 "ms1_eic_unit",
+                 choices=c("ppm","Da"))
+        upd_unit(in_conf$tolerance[["rt"]],
+                 "ms1_rt_win",
+                 "ms1_rt_win_unit",
+                 choices=c("min","s"))
+
+        ## Prescreen
+        upd_num(in_conf$prescreen[["ms1_int_thresh"]],
+                "ms1_int_thresh")
+        upd_num(in_conf$prescreen[["ms2_int_thresh"]],
+                "ms2_int_thresh")
+        upd_num(in_conf$prescreen[["s2n"]],
+                "s2n")
+        upd_unit(in_conf$prescreen[["ret_time_shift_tol"]],
+                 "ret_time_shift_tol",
+                 "ret_time_shift_tol_unit",
+                 choices=c("min","s"))
+
+        ## Files
+        df <- shinyscreen:::file2tab(in_conf$data)
+        df[,tag:=as.character(tag),with=T]
+        rv_dfiles(df[,.(File=Files,tag)])
+        nms <- colnames(df)
+        nms <- nms[nms!="Files"]
+        fdt <- df[,..nms]
+        rv_datatab(fdt)
+
+        ## figures
+        upd_unit(in_conf$figures$rt_min,
+                 "plot_rt_min",
+                 "plot_rt_min_unit",
+                 choices=c("min","s"))
+        
+        upd_unit(in_conf$figures$rt_max,
+                 "plot_rt_max",
+                 "plot_rt_max_unit",
+                 choices=c("min","s"))
+
+        logentry <- in_conf$figures$logaxes
+        logchoice <- logical(0)
+        logchoice <- mapply(function(cn,uin) if (cn %in% logentry) uin else NA,
+                            c("ms1_eic_int","ms2_eic_int","ms2_spec_int"),
+                            c("MS1 EIC","MS2 EIC","MS2 Spectrum"),USE.NAMES = F)
+        logchoice <- logchoice[!is.na(logchoice)]
+        
+        updateCheckboxGroupInput(session = session,
+                                 inputId = "plot_log",
+                                 choices = c("MS1 EIC",
+                                             "MS2 EIC",
+                                             "MS2 Spectrum"),
+                                 selected = logchoice)
+        ## Report
+        if (isTruthy(in_conf$report$author)) updateTextInput(session,"rep_aut",value = in_conf$report$author)
+        if (isTruthy(in_conf$report$title)) updateTextInput(session,"rep_tit",value = in_conf$report$title)
+
+        
+    })
+}
 
 ```
 
@@ -622,7 +772,32 @@ observeEvent(input$extract_b,{
                                  extr_data(m)
                              })
     message("(extract) Done extracting.")
-    rv_state <- list2rev(state)
+    z <- shinyscreen::merge2rev(rv_state,lst = state)
+    eval(z)
+    ## rv_state <<- list2rev(state)
+    
+})
+
+observeEvent(input$presc_b,{
+    validate(need(NROW(rv_state$extr$ms) > 0,
+                  message = "Perform extraction first."))
+    m <- rev2list(rv_state)
+
+    fn_c_state <- file.path(m$conf$project,
+                            paste0("presc.",shinyscreen:::FN_CONF))
+    yaml::write_yaml(x=m$conf,file=fn_c_state)
+    message("(prescreen) Config written to ", fn_c_state)
+    state <- withr::with_dir(new=m$conf$project,
+                             code = {
+                                 m <- prescreen(m)
+                                 m <- sort_spectra(m)
+                                 subset_summary(m)
+                             })
+    message("(prescreen) Done prescreening.")
+    
+    z <- shinyscreen::merge2rev(rv_state,lst = state)
+    eval(z)
+    
     
 })
 
@@ -640,39 +815,6 @@ observeEvent(input$conf_file_save_b,
 
 observeEvent(input$conf_file_load_b,
 {
-    upd_unit <- function(entry,inp_val,inp_unit,choices) {
-        if (isTruthy(entry)) {
-            cntnt <- strsplit(entry,split = "[[:space:]]+")[[1]]
-            cntnt <- cntnt[nchar(cntnt) > 0]
-            if (length(cntnt)!=2) stop("(upd_unit) ","Unable to interpret ", entry)
-            val <- cntnt[[1]]
-            unit <- cntnt[[2]]
-            updateNumericInput(session = session,
-                               inputId = inp_val,
-                               value = as.numeric(val))
-            updateSelectInput(session = session,
-                              inputId = inp_unit,
-                              selected = unit,
-                              choices = choices)
-        }
-    }
-
-    upd_num <- function(entry,inp_val) {
-        if (isTruthy(entry)) {
-            updateNumericInput(session = session,
-                               inputId = inp_val,
-                               value = as.numeric(entry))
-        }
-    }
-
-    upd_sel <- function(inputId,selected,choices) {
-        if (isTruthy(selected)) {
-            updateSelectInput(session = session,
-                              inputId = inputId,
-                              selected = selected,
-                              choices = choices)
-        }
-    }
 
     filters <- matrix(c("YAML files", ".yaml",
                         "All files", "*"),
@@ -684,88 +826,32 @@ observeEvent(input$conf_file_load_b,
     if (nchar(fn) > 0) {
         state <- new_state_fn_conf(fn)
         conf <- state$conf
-        isolate({
-            rv_state$conf$project <- conf$project
-            rv_state$conf$data <- conf$data
-            ## Lists
-            rv_state$conf$compounds$lists <- conf$compounds$lists
-            rv_state$conf$compounds$sets <- conf$compounds$sets
-            
-            ## Tolerance
-            
-            upd_unit(conf$tolerance[["ms1 fine"]],
-                     "ms1_fine",
-                     "ms1_fine_unit",
-                     choices=c("ppm","Da"))
-            upd_unit(conf$tolerance[["ms1 coarse"]],
-                     "ms1_coarse",
-                     "ms1_coarse_unit",
-                     choices=c("ppm","Da"))
-
-            upd_unit(conf$tolerance[["eic"]],
-                     "ms1_eic",
-                     "ms1_eic_unit",
-                     choices=c("ppm","Da"))
-            upd_unit(conf$tolerance[["rt"]],
-                     "ms1_rt_win",
-                     "ms1_rt_win_unit",
-                     choices=c("min","s"))
-
-            ## Prescreen
-            upd_num(conf$prescreen[["ms1_int_thresh"]],
-                    "ms1_int_thresh")
-            upd_num(conf$prescreen[["ms2_int_thresh"]],
-                    "ms2_int_thresh")
-            upd_num(conf$prescreen[["s2n"]],
-                    "s2n")
-            upd_unit(conf$prescreen[["ret_time_shift_tol"]],
-                     "ret_time_shift_tol",
-                     "ret_time_shift_tol_unit",
-                     choices=c("min","s"))
-
-            ## Files
-            df <- shinyscreen:::file2tab(conf$data)
-            df[,tag:=as.character(tag),with=T]
-            rv_dfiles(df[,.(File=Files,tag)])
-            nms <- colnames(df)
-            nms <- nms[nms!="Files"]
-            fdt <- df[,..nms]
-            rv_datatab(fdt)
-
-            ## figures
-            upd_unit(conf$figures$rt_min,
-                     "plot_rt_min",
-                     "plot_rt_min_unit",
-                     choices=c("min","s"))
-            
-            upd_unit(conf$figures$rt_max,
-                     "plot_rt_max",
-                     "plot_rt_max_unit",
-                     choices=c("min","s"))
-
-            logentry <- conf$figures$logaxes
-            logchoice <- logical(0)
-            logchoice <- mapply(function(cn,uin) if (cn %in% logentry) uin else NA,
-                                c("ms1_eic_int","ms2_eic_int","ms2_spec_int"),
-                                c("MS1 EIC","MS2 EIC","MS2 Spectrum"),USE.NAMES = F)
-            logchoice <- logchoice[!is.na(logchoice)]
-            
-            updateCheckboxGroupInput(session = session,
-                                     inputId = "plot_log",
-                                     choices = c("MS1 EIC",
-                                                 "MS2 EIC",
-                                                 "MS2 Spectrum"),
-                                     selected = logchoice)
-            ## Report
-            if (isTruthy(conf$report$author)) updateTextInput(session,"rep_aut",value = conf$report$author)
-            if (isTruthy(conf$report$title)) updateTextInput(session,"rep_tit",value = conf$report$title)
-
-            
-        })
+        
+        update_gui(conf,session=session)
+        
         
     }
 
     
+})
+
+observeEvent(input$state_file_load_b,{
+    filters <- matrix(c("RDS files", ".rds",
+                        "All files", "*"),
+                      2, 2, byrow = TRUE)
+    fn <- tcltk::tk_choose.files(filters=filters,
+                                 multi = F)
+    message("(config) Loading state from: ", paste(fn,collapse = ","))
+    fn <- if (length(fn)>0 && nchar(fn[[1]])>0) fn else ""
+
+    if (nchar(fn) > 0) {
+        state <- readRDS(file=fn)
+        z <- shinyscreen::merge2rev(rv_state,lst = state)
+        print(z)
+        eval(z)
+        update_gui(rv_state$conf, session=session)
+
+    }
 })
 
 
@@ -926,7 +1012,23 @@ output$summ_subset <- rhandsontable::renderRHandsontable({
 
     rhandsontable::rhandsontable(def_summ_subset)
 })
+
+output$summ_table <- DT::renderDataTable({
+
+    tab <- rv_state$out$tab$flt_summ[,.(Files=NULL)]
+    validate(need(NROW(tab)>0, message = "Please prescreen the data first."))
+    DT::datatable(tab,
+                  style = 'bootstrap',
+                  class = 'table-condensed',
+                  extensions = 'Scroller',
+                  options = list(scrollX = T,
+                                 scrollY = 200,
+                                 deferRender = T,
+                                 scroller = T))
+})
 ```
+
+
 
 ```{r, echo=F, context = 'server'}
 session$onSessionEnded(function () stopApp())
