--- a/inst/rmd/app.Rmd
+++ b/inst/rmd/app.Rmd
@@ -348,6 +348,44 @@ shinyscreen::rt_input(input_rt = "plot_rt_max",
                       pref = "max:")
 ```
 
+### Grouping plots
+
+<details><summary>How to group plots?</summary> 
+
+The _Select plot group_ and _Select plot label_ controls control how
+the data is visually grouped together. The _plot group_ groups
+together multiple curves in a single graph. Each curve in a graph is
+designated by the _plot label_.
+
+</details>
+
+<div style= "display: flex; vertical-align:top; ">
+
+<div style="padding-right:0.5em;">
+```{r, echo=F}
+p_feats <- 1:length(shinyscreen:::PLOT_FEATURES)
+names(p_feats) <- shinyscreen:::PLOT_FEATURES
+selectInput(inputId = "plot_grp_plot",
+            label = "Select plot group",
+            choices = p_feats,
+            selected = p_feats[[shinyscreen:::FIG_DEF_CONF$grouping[["plot"]]]],
+            width  = "100%")
+```
+</div>
+
+<div style="padding-left:0.5em;">
+```{r, echo=F}
+p_feats <- 1:length(shinyscreen:::PLOT_FEATURES)
+names(p_feats) <- shinyscreen:::PLOT_FEATURES
+selectInput(inputId = "plot_label",
+            label = "Select plot label",
+            choices = p_feats,
+            selected = p_feats[[shinyscreen:::FIG_DEF_CONF$grouping[["label"]]]],
+            width = "100%")
+```
+</div>
+
+</div>
 ## Report
 
 ```{r, echo=F}
@@ -370,33 +408,19 @@ DT::dataTableOutput("setid_table")
 
 # Save and Restore
 
-## Save and Restore from a Config File
-
-Shinyscreen uses _YAML_ config files to initialise the
-computation. These operations only save and restore the input
-parameters of your computation, _**not**_ your data.
-
-```{r, echo=FALSE}
-actionButton(inputId = "conf_file_load_b",
-             label= "Load project config")
-
-```
-
-```{r, echo=FALSE}
-actionButton(inputId = "conf_file_save_b",
-             label= "Save config")
-
-```
-
-## Restore the project
-
-To retrieve a previously extracted data, restore the project state
-here. It is also possible to load it in a script (the state is saved
-in the _RDS_ format).
+Shinyscreen can start from either a previously saved _state_ file (in
+RDS format), or from a _YAML_ config file. States saved using GUI can
+also be used from the script.
 
 ```{r, echo=FALSE}
 actionButton(inputId = "state_file_load_b",
              label= "Restore project state")
+
+```
+
+```{r, echo=FALSE}
+actionButton(inputId = "state_file_save_b",
+             label= "Save project state")
 
 ```
 
@@ -505,8 +529,6 @@ ord_asc <- grepl("^-.+",shinyscreen:::DEF_INDEX_SUMM)
 ord_asc <- factor(ifelse(ord_asc, "descending", "ascending"),levels = c("ascending","descending"))
 def_ord_summ <- shinyscreen:::dtable("Column Name"=ord_nms,"Direction"=ord_asc)
 
-
-
 update_gui <- function(in_conf, session) {
     upd_unit <- function(entry,inp_val,inp_unit,choices) {
         if (isTruthy(entry)) {
@@ -584,7 +606,7 @@ update_gui <- function(in_conf, session) {
         ## Files
         df <- shinyscreen:::file2tab(in_conf$data)
         df[,tag:=as.character(tag),with=T]
-        rv_dfiles(df[,.(File=Files,tag)])
+        rv_dfiles(df[,.(File=Files,tag),by=c("Files","tag"),mult="first"])
         nms <- colnames(df)
         nms <- nms[nms!="Files"]
         fdt <- df[,..nms]
@@ -791,7 +813,8 @@ observe({
 observe({
     dtab <- rv_datatab()
     dfiles <- rv_dfiles()
-
+    print(dtab)
+    print(dfiles)
     message("(config) Generating mzml from rv.")
     isolate(rv_state$input$tab$mzml <- dtab[dfiles,on="tag"])
 
@@ -872,56 +895,52 @@ observeEvent(input$plot_b,{
     eval(z)
 })
 
-observeEvent(input$conf_file_save_b,
-{
-    state <- rf_conf_state()
-    ftab <- get_fn_ftab(state)
-    fconf <- get_fn_conf(state)
-    yaml::write_yaml(state$conf,
-                     file = fconf)
-    shinyscreen:::tab2file(tab=state$input$tab$mzml,file=ftab)
-    message("Written data-file table to ",ftab)
-    message("Written config to ",fconf)
-})
-
-observeEvent(input$conf_file_load_b,
-{
-
-    filters <- matrix(c("YAML files", ".yaml",
-                        "All files", "*"),
-                      2, 2, byrow = TRUE)
-    fn <- tcltk::tk_choose.files(filters=filters,
-                                 multi = F)
-    message("(config) Loading config from: ", paste(fn,collapse = ","))
-    fn <- if (length(fn)>0 && nchar(fn[[1]])>0) fn else ""
-    if (nchar(fn) > 0) {
-        state <- new_state_fn_conf(fn)
-        conf <- state$conf
-        
-        update_gui(conf,session=session)
-        
-        
-    }
-
-    
-})
-
 observeEvent(input$state_file_load_b,{
     filters <- matrix(c("RDS files", ".rds",
+                        "YAML config files", ".yaml",
                         "All files", "*"),
-                      2, 2, byrow = TRUE)
+                      3, 2, byrow = TRUE)
     fn <- tcltk::tk_choose.files(filters=filters,
                                  multi = F)
+    
     message("(config) Loading state from: ", paste(fn,collapse = ","))
     fn <- if (length(fn)>0 && nchar(fn[[1]])>0) fn else ""
 
     if (nchar(fn) > 0) {
-        state <- readRDS(file=fn)
-        z <- shinyscreen::merge2rev(rv_state,lst = state)
-        print(z)
-        eval(z)
-        update_gui(rv_state$conf, session=session)
+        if (grepl("yaml",fn)) {
+            state <- new_state_fn_conf(fn)
+            conf <- state$conf
+            update_gui(conf,session=session)
+        } else {
+            state <- readRDS(file=fn)
+            z <- shinyscreen::merge2rev(rv_state,lst = state)
+            eval(z)
+            update_gui(rv_state$conf, session=session)
+        }
 
+    }
+})
+
+observeEvent(input$state_file_save_b,{
+    filters <- matrix(c("RDS files", ".rds",
+                        "All files", "*"),
+                      2, 2, byrow = TRUE)
+    fn <- tk_save_file(filters=filters,                       
+                       default = "state.rds")
+    message("(config) Saving state to: ", paste(fn,collapse = ","))
+    fn <- if (length(fn)>0 && nchar(fn[[1]])>0) fn else ""
+
+    if (nchar(fn) > 0) {
+        m <- rev2list(rv_state)
+        ftab <- get_fn_ftab(m)
+        fconf <- get_fn_conf(m)
+        yaml::write_yaml(m$conf,
+                         file = fconf)
+        shinyscreen:::tab2file(tab=m$input$tab$mzml,file=ftab)
+        m$conf$data <- ftab
+
+        
+        saveRDS(object=m,file=fn)
     }
 })
 
